# Trailhead

./: README.md
.github/workflows/: build_docs.yaml  deploy_docs.yaml
aws/: README.md  main.tf
aws/docs/: cloudfront.tf  s3.tf
docs/: .gitignore  pyproject.toml
docs/docs/: livehtml.py
docs/docs/source/: conf.py  index.rst
docs/docs/source/schedule/: 2022.rst
docs/docs/source/survey_ideation/: conference_simulation.rst
docs/docs/source/writing_submission/: internal_review.rst
docs/environments/continuous_integration/: docker-compose.yaml
docs/environments/development/: Dockerfile  docker-compose.yaml
