[tool.poetry]
name = "xccv_trailhead"
version = "0.1.0"
description = ""
authors = ["cvpaper.challenge xccv group"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^4.3.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.930"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
